# wine-sommelier-rag-app

./: .gitignore  Dockerfile  README.md  app.py  dashboard.py  db_init.py  db_query.py  db_save.py  docker-compose.yaml  download_model.py  evaluate_rag.py  evaluate_retrieval.py  generate_ground_truth.py  ingest.py  instructions.md  judge.py  main.py  pyproject.toml  rag.py  rerank.py  search.py
