[project]
name = "wine-sommelier-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.23.0",
    "onnxruntime>=1.27.0",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "streamlit>=1.59.2",
    "tokenizers>=0.23.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
